# agrisat-pipeline

./: .gitignore  .replit  api_server.py  main.py  pyproject.toml  satellite_monitoring.db
config/: database_schema.sql  pyproject.toml  requirements.txt  setup.py
docs/: ADVANCED_OPTIMIZATION_FEATURES.md  API_REFERENCE.md  COPERNICUS_OPTIMIZATION.md  COPERNICUS_OPTIMIZATION_SUMMARY.md  DATABASE_SCHEMA.md  INSTALL.md  PIPELINE_PROCESSES.md  PROJECT_STRUCTURE.md  README.md  SCL_CLOUD_MASKING_AND_METADATA.md
scripts/: create_database.py  run_local.py
src/: __init__.py
src/api/: __init__.py  server.py
src/core/: __init__.py  config.py  pipeline.py
src/data/: __init__.py  database_manager.py  models.py
src/processors/: __init__.py  indices_calculator.py  metadata_generator.py  parallel_processor.py  quality_filter.py  satellite_processor.py
src/services/: __init__.py  api_client.py  auth.py  copernicus_optimizer.py  satellite_search.py
src/utils/: __init__.py  helpers.py
tests/: test_api.py
