[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "numpy>=2.3.0",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "psutil>=7.0.0",
]
