[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "numpy>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "rasterio>=1.4.3",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
]
